<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/ic_action_login"
            android:title="@string/title_login"
            />
        <item
            android:id="@+id/menu_collection"
            android:icon="@drawable/ic_action_list"
            android:title="@string/title_collection"
            />
        <item
            android:id="@+id/menu_calendar"
            android:icon="@drawable/ic_action_explore"
            android:title="@string/title_calendar"
            />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/menu_settings"
            />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/menu_logout"
            />
    </group>

</menu>