<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <include
        android:id="@+id/toolbar_wrapper"
        layout="@layout/fragment_base_toolbar"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_padding"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/field_username"
            app:met_floatingLabel="highlight"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/field_password"
            app:met_floatingLabel="highlight"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:layout_marginTop="@dimen/base_space"
            style="@style/button_rectangle"
            />
    </LinearLayout>

</LinearLayout>
