<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_padding"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/include_subject_detail_progress_bar"
        layout="@layout/fragment_progress_bar"
        />

    <LinearLayout
        android:id="@+id/subject_detail_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- summary -->
        <TextView
            android:id="@+id/subject_summary_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_subject_summary"
            style="@style/label_primary"
            />

        <TextView
            android:id="@+id/subject_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_primary"
            />

        <!-- type -->
        <TextView
            android:id="@+id/subject_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_subject_type"
            style="@style/label_primary"
            />

        <TextView
            android:id="@+id/subject_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_primary"
            />

        <!-- date -->
        <TextView
            android:id="@+id/subject_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_subject_date"
            style="@style/label_primary"
            />

        <TextView
            android:id="@+id/subject_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_primary"
            />

        <!-- weekday -->
        <TextView
            android:id="@+id/subject_weekday_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_subject_weekday"
            style="@style/label_primary"
            />

        <TextView
            android:id="@+id/subject_weekday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_primary"
            />

    </LinearLayout>

</LinearLayout>

